style: fix z-index not working due to different stacking context

--- a/src/components/Navbar/style.module.scss
+++ b/src/components/Navbar/style.module.scss
@@ -3,7 +3,7 @@
 .header {
 	background-color: white;
 	display: flex;
-	position: sticky;
+	position: relative;
 	align-items: center;
 	justify-content: space-between;
 	padding: 0.25rem 1rem;
@@ -58,6 +58,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
+	z-index: 99;
 	height: 100vh;
 	width: 100vw;
 	color: $color-text;
